--- a/index.html
+++ b/index.html
@@ -3,80 +3,58 @@
 <head>
   <meta charset="UTF-8">
   <title>Upload Sample Images</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { 
-      font-family: Arial, sans-serif; 
-      padding: 20px; 
-      margin: 0;
-      background-color: #f7f7f7;
-    }
-
-    h2 { text-align: center; }
-
-    select, input, button { 
-      margin: 10px 0; 
-      display: block; 
-      width: 100%; 
-      box-sizing: border-box; 
-      font-size: 16px;
-      padding: 10px;
-    }
-
-    button {
-      background-color: #007bff;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #0056b3;
-    }
-
+    body { font-family: Arial, sans-serif; padding: 20px; margin:0; }
+    select, input, button { margin: 10px 0; display: block; font-size: 16px; }
+    
     .preview-container {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
       margin-top: 10px;
-      position: relative;
+      align-items: flex-start;
     }
 
-    .preview img {
-      max-width: 100px;
-      max-height: 100px;
+    .preview-wrapper {
+      width: 80px;
+      height: 80px;
       border: 1px solid #ccc;
       border-radius: 5px;
-    }
-
-    #addMoreBtn {
-      width: 50px;
-      height: 50px;
-      font-size: 24px;
+      overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: 10px;
-      flex-shrink: 0;
+    }
+
+    .preview-wrapper img {
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: cover;
+    }
+
+    .input-container {
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      flex-wrap: wrap;
+      gap: 10px;
+    }
+
+    .input-container button {
+      display: inline-block; 
+      padding: 6px 12px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    #uploadBtn {
+      margin-top: 20px;
+      font-size: 16px;
+      padding: 8px 16px;
     }
 
     @media (max-width: 480px) {
-      .preview img {
-        max-width: 80px;
-        max-height: 80px;
-      }
-
-      button, select, input {
-        font-size: 14px;
-        padding: 8px;
-      }
-
-      #addMoreBtn {
-        width: 40px;
-        height: 40px;
-        font-size: 20px;
-      }
+      .preview-wrapper { width: 60px; height: 60px; }
     }
   </style>
 </head>
@@ -88,23 +66,27 @@
     <option value="">Select Tracking Number</option>
   </select>
 
-  <div class="preview-container" id="previewContainer">
+  <div class="preview-container" id="preview"></div>
+
+  <div class="input-container" id="fileInputContainer">
+    <input type="file" accept="image/*" capture="environment">
     <button type="button" id="addMoreBtn">+</button>
   </div>
 
   <button id="uploadBtn">Upload</button>
 
   <script>
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxK9JgL7RtAwn_EDZ89LSxfPCJjXw6uFHbjMxU62618OkSXbrz2qzBKuEsFy7IvQZvgwg/exec";
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxK8JgL7RtAwn_EDZ89LSxfPCJjXw6uFHbjMxU62618OkSXbrz2qzBKuEsFy7IvQZvgwg/exec";
 
     const trackingSelect = document.getElementById("trackingSelect");
-    const previewContainer = document.getElementById("previewContainer");
+    const fileInputContainer = document.getElementById("fileInputContainer");
+    const previewDiv = document.getElementById("preview");
     const uploadBtn = document.getElementById("uploadBtn");
     const addMoreBtn = document.getElementById("addMoreBtn");
 
     let filesToUpload = [];
 
-    // Fetch today's tracking numbers
+    // ---------- Fetch today's tracking numbers ----------
     fetch(WEB_APP_URL)
       .then(res => res.json())
       .then(data => {
@@ -124,37 +106,51 @@
       })
       .catch(console.error);
 
-    // ---------- Function to handle image selection ----------
+    // ---------- Handle file selection and preview ----------
     function handleFileInput(file) {
+      const wrapper = document.createElement("div");
+      wrapper.className = "preview-wrapper";
+
       const img = document.createElement("img");
       img.src = URL.createObjectURL(file);
-      previewContainer.insertBefore(img, addMoreBtn); // always insert before the + button
+
+      wrapper.appendChild(img);
+
+      previewDiv.appendChild(wrapper); // append preview
       filesToUpload.push(file);
     }
 
-    // ---------- Add More Images ----------
-    addMoreBtn.addEventListener("click", () => {
-      const input = document.createElement("input");
-      input.type = "file";
-      input.accept = "image/*";
-      input.capture = "environment";
-      input.style.display = "none"; // hide input
+    fileInputContainer.addEventListener("change", (event) => {
+      const input = event.target;
+      const fileList = input.files;
 
-      input.addEventListener("change", (event) => {
-        const fileList = event.target.files;
+      if (fileList.length > 0) {
+        for (let i = 0; i < fileList.length; i++) {
+          handleFileInput(fileList[i]);
+        }
+      }
+    });
+
+    // ---------- Add more images button ----------
+    addMoreBtn.addEventListener("click", () => {
+      const newInput = document.createElement("input");
+      newInput.type = "file";
+      newInput.accept = "image/*";
+      newInput.capture = "environment";
+      fileInputContainer.insertBefore(newInput, addMoreBtn);
+
+      // Listen for change on the new input
+      newInput.addEventListener("change", (e) => {
+        const fileList = e.target.files;
         if (fileList.length > 0) {
           for (let i = 0; i < fileList.length; i++) {
             handleFileInput(fileList[i]);
           }
         }
       });
-
-      document.body.appendChild(input);
-      input.click(); // trigger file picker
-      document.body.removeChild(input);
     });
 
-    // ---------- Resize and Compress Image to WebP format ----------
+    // ---------- Resize & compress to WebP ----------
     function resizeImage(file, maxSize = 1000000) {
       return new Promise((resolve, reject) => {
         const img = new Image();
@@ -194,16 +190,17 @@
       });
     }
 
-    // ---------- Upload Images ----------
+    // ---------- Upload images ----------
     uploadBtn.addEventListener("click", () => {
       const tracking = trackingSelect.value;
       if (!tracking) return alert("Please select a tracking number");
       if (filesToUpload.length === 0) return alert("Please select at least one image");
 
-      const readers = filesToUpload.map(file => resizeImage(file, 1000000));
+      const readers = filesToUpload.map(file => resizeImage(file));
 
       Promise.all(readers).then(results => {
         const imagesParam = results.join("|");
+
         fetch(WEB_APP_URL, {
           method: "POST",
           body: new URLSearchParams({
@@ -215,7 +212,7 @@
         .then(data => {
           if (data.success) {
             alert("Uploaded successfully!");
-            previewContainer.querySelectorAll("img").forEach(img => img.remove());
+            previewDiv.innerHTML = "";
             filesToUpload = [];
           } else {
             alert("Error: " + (data.error || "Unknown error"));
