--- a/index.html
+++ b/index.html
@@ -3,76 +3,80 @@
 <head>
   <meta charset="UTF-8">
   <title>Upload Sample Images</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; margin:0; }
-    select, input, button { margin: 10px 0; display: block; font-size: 16px; }
-    
+    body { 
+      font-family: Arial, sans-serif; 
+      padding: 20px; 
+      margin: 0;
+      background-color: #f7f7f7;
+    }
+
+    h2 { text-align: center; }
+
+    select, input, button { 
+      margin: 10px 0; 
+      display: block; 
+      width: 100%; 
+      box-sizing: border-box; 
+      font-size: 16px;
+      padding: 10px;
+    }
+
+    button {
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #0056b3;
+    }
+
     .preview-container {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
       margin-top: 10px;
-      align-items: flex-start;
+      position: relative;
     }
 
-    .preview-wrapper {
-      position: relative;
-      width: 80px;
-      height: 80px;
+    .preview img {
+      max-width: 100px;
+      max-height: 100px;
       border: 1px solid #ccc;
       border-radius: 5px;
-      overflow: hidden;
+    }
+
+    #addMoreBtn {
+      width: 50px;
+      height: 50px;
+      font-size: 24px;
       display: flex;
       align-items: center;
       justify-content: center;
-    }
-
-    .preview-wrapper img {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: cover;
-    }
-
-    .remove-btn {
-      position: absolute;
-      top: 0;
-      right: 0;
-      background: rgba(255,0,0,0.8);
-      color: white;
-      font-weight: bold;
-      border: none;
-      border-radius: 50%;
-      width: 20px;
-      height: 20px;
-      cursor: pointer;
-      line-height: 18px;
-      text-align: center;
-      padding: 0;
-    }
-
-    .input-container {
-      margin-top: 20px;
-      display: flex;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-
-    .input-container button {
-      display: inline-block; 
-      padding: 6px 12px;
-      font-size: 18px;
-      cursor: pointer;
-    }
-
-    #uploadBtn {
-      margin-top: 20px;
-      font-size: 16px;
-      padding: 8px 16px;
+      margin-top: 10px;
+      flex-shrink: 0;
     }
 
     @media (max-width: 480px) {
-      .preview-wrapper { width: 60px; height: 60px; }
+      .preview img {
+        max-width: 80px;
+        max-height: 80px;
+      }
+
+      button, select, input {
+        font-size: 14px;
+        padding: 8px;
+      }
+
+      #addMoreBtn {
+        width: 40px;
+        height: 40px;
+        font-size: 20px;
+      }
     }
   </style>
 </head>
@@ -84,27 +88,23 @@
     <option value="">Select Tracking Number</option>
   </select>
 
-  <div class="preview-container" id="preview"></div>
-
-  <div class="input-container" id="fileInputContainer">
-    <input type="file" accept="image/*" capture="environment">
+  <div class="preview-container" id="previewContainer">
     <button type="button" id="addMoreBtn">+</button>
   </div>
 
   <button id="uploadBtn">Upload</button>
 
   <script>
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxK8JgL7RtAwn_EDZ89LSxfPCJjXw6uFHbjMxU62618OkSXbrz2qzBKuEsFy7IvQZvgwg/exec";
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbxK9JgL7RtAwn_EDZ89LSxfPCJjXw6uFHbjMxU62618OkSXbrz2qzBKuEsFy7IvQZvgwg/exec";
 
     const trackingSelect = document.getElementById("trackingSelect");
-    const fileInputContainer = document.getElementById("fileInputContainer");
-    const previewDiv = document.getElementById("preview");
+    const previewContainer = document.getElementById("previewContainer");
     const uploadBtn = document.getElementById("uploadBtn");
     const addMoreBtn = document.getElementById("addMoreBtn");
 
     let filesToUpload = [];
 
-    // ---------- Fetch today's tracking numbers ----------
+    // Fetch today's tracking numbers
     fetch(WEB_APP_URL)
       .then(res => res.json())
       .then(data => {
@@ -124,59 +124,37 @@
       })
       .catch(console.error);
 
-    // ---------- Handle file selection and preview ----------
+    // ---------- Function to handle image selection ----------
     function handleFileInput(file) {
-      const wrapper = document.createElement("div");
-      wrapper.className = "preview-wrapper";
-
       const img = document.createElement("img");
       img.src = URL.createObjectURL(file);
-
-      const removeBtn = document.createElement("button");
-      removeBtn.textContent = "×";
-      removeBtn.className = "remove-btn";
-      removeBtn.addEventListener("click", () => {
-        const index = filesToUpload.indexOf(file);
-        if (index > -1) filesToUpload.splice(index, 1);
-        wrapper.remove();
-      });
-
-      wrapper.appendChild(img);
-      wrapper.appendChild(removeBtn);
-      previewDiv.appendChild(wrapper);
+      previewContainer.insertBefore(img, addMoreBtn); // always insert before the + button
       filesToUpload.push(file);
     }
 
-    fileInputContainer.addEventListener("change", (event) => {
-      const input = event.target;
-      const fileList = input.files;
-
-      if (fileList.length > 0) {
-        for (let i = 0; i < fileList.length; i++) {
-          handleFileInput(fileList[i]);
-        }
-      }
-    });
-
-    // ---------- Add more images button ----------
+    // ---------- Add More Images ----------
     addMoreBtn.addEventListener("click", () => {
-      const newInput = document.createElement("input");
-      newInput.type = "file";
-      newInput.accept = "image/*";
-      newInput.capture = "environment";
-      fileInputContainer.insertBefore(newInput, addMoreBtn);
+      const input = document.createElement("input");
+      input.type = "file";
+      input.accept = "image/*";
+      input.capture = "environment";
+      input.style.display = "none"; // hide input
 
-      newInput.addEventListener("change", (e) => {
-        const fileList = e.target.files;
+      input.addEventListener("change", (event) => {
+        const fileList = event.target.files;
         if (fileList.length > 0) {
           for (let i = 0; i < fileList.length; i++) {
             handleFileInput(fileList[i]);
           }
         }
       });
+
+      document.body.appendChild(input);
+      input.click(); // trigger file picker
+      document.body.removeChild(input);
     });
 
-    // ---------- Resize & compress to WebP ----------
+    // ---------- Resize and Compress Image to WebP format ----------
     function resizeImage(file, maxSize = 1000000) {
       return new Promise((resolve, reject) => {
         const img = new Image();
@@ -216,17 +194,16 @@
       });
     }
 
-    // ---------- Upload images ----------
+    // ---------- Upload Images ----------
     uploadBtn.addEventListener("click", () => {
       const tracking = trackingSelect.value;
       if (!tracking) return alert("Please select a tracking number");
       if (filesToUpload.length === 0) return alert("Please select at least one image");
 
-      const readers = filesToUpload.map(file => resizeImage(file));
+      const readers = filesToUpload.map(file => resizeImage(file, 1000000));
 
       Promise.all(readers).then(results => {
         const imagesParam = results.join("|");
-
         fetch(WEB_APP_URL, {
           method: "POST",
           body: new URLSearchParams({
@@ -238,7 +215,7 @@
         .then(data => {
           if (data.success) {
             alert("Uploaded successfully!");
-            previewDiv.innerHTML = "";
+            previewContainer.querySelectorAll("img").forEach(img => img.remove());
             filesToUpload = [];
           } else {
             alert("Error: " + (data.error || "Unknown error"));
